Created game board, squares, and letter allocation

--- a/index.html
+++ b/index.html
@@ -13,17 +13,198 @@
     </head>
 
     <body>
-        <header>
-            <div class = "wordle-banner">
-                <h1 class = "game-name"> WORDLE </h1>
-            </div>
+        <header class = "header-container">
+            WORDLE
         </header>
 
         <main>
+            <div class = "game-board">
+
+                <div class = "squares-for-letters">
+                    <p class = "letter">
+                        F
+                    </p>
+                </div>
+
+                <div class = "squares-for-letters">
+                    <p class = "letter">
+                        F
+                    </p>
+                </div>
+
+                <div class = "squares-for-letters">
+                    <p class = "letter">
+                        F
+                    </p>
+                </div>
+
+                <div class = "squares-for-letters">
+                    <p class = "letter">
+                        F
+                    </p>
+                </div>
+
+                <div class = "squares-for-letters">
+                    <p class = "letter">
+                        F
+                    </p>
+                </div>
+
+                <div class = "squares-for-letters">
+                    <p class = "letter">
+                        F
+                    </p>
+                </div>
+
+                <div class = "squares-for-letters">
+                    <p class = "letter">
+                        F
+                    </p>
+                </div>
+
+                <div class = "squares-for-letters">
+                    <p class = "letter">
+                        F
+                    </p>
+                </div>
+
+                <div class = "squares-for-letters">
+                    <p class = "letter">
+                        F
+                    </p>
+                </div>
+
+                <div class = "squares-for-letters">
+                    <p class = "letter">
+                        F
+                    </p>
+                </div>
+
+                <div class = "squares-for-letters">
+                    <p class = "letter">
+                        F
+                    </p>
+                </div>
+
+                <div class = "squares-for-letters">
+                    <p class = "letter">
+                        F
+                    </p>
+                </div>
+
+                <div class = "squares-for-letters">
+                    <p class = "letter">
+                        F
+                    </p>
+                </div>
+
+                <div class = "squares-for-letters">
+                    <p class = "letter">
+                        F
+                    </p>
+                </div>
+
+                <div class = "squares-for-letters">
+                    <p class = "letter">
+                        F
+                    </p>
+                </div>
+
+                <div class = "squares-for-letters">
+                    <p class = "letter">
+                        F
+                    </p>
+                </div>
+
+                <div class = "squares-for-letters">
+                    <p class = "letter">
+                        F
+                    </p>
+                </div>
+
+                <div class = "squares-for-letters">
+                    <p class = "letter">
+                        F
+                    </p>
+                </div>
+
+                <div class = "squares-for-letters">
+                    <p class = "letter">
+                        F
+                    </p>
+                </div>
+
+                <div class = "squares-for-letters">
+                    <p class = "letter">
+                        F
+                    </p>
+                </div>
+
+                <div class = "squares-for-letters">
+                    <p class = "letter">
+                        F
+                    </p>
+                </div>
+
+                <div class = "squares-for-letters">
+                    <p class = "letter">
+                        F
+                    </p>
+                </div>
+
+                <div class = "squares-for-letters">
+                    <p class = "letter">
+                        F
+                    </p>
+                </div>
+
+                <div class = "squares-for-letters">
+                    <p class = "letter">
+                        F
+                    </p>
+                </div>
+
+                <div class = "squares-for-letters">
+                    <p class = "letter">
+                        F
+                    </p>
+                </div>
+
+                <div class = "squares-for-letters">
+                    <p class = "letter">
+                        F
+                    </p>
+                </div>
+
+                <div class = "squares-for-letters">
+                    <p class = "letter">
+                        F
+                    </p>
+                </div>
+
+                <div class = "squares-for-letters">
+                    <p class = "letter">
+                        F
+                    </p>
+                </div>
+
+                <div class = "squares-for-letters">
+                    <p class = "letter">
+                        F
+                    </p>
+                </div>
+
+                <div class = "squares-for-letters">
+                    <p class = "letter">
+                        F
+                    </p>
+                </div>
+            </div>
         </main>
 
-        <footer>
-            <p> Copyright 2024 - Group 4 CSI 3140 Assignment 2 </p>
+        <footer class = "footer-container">
+            COPYRIGHT 2024 - CSI 3140 A2
         </footer>
+
     </body>
 </html>
