Created the board through JS

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
         <meta name = "viewport" content = "width=device-width, initial-scale=1.0">
 
         <link rel = "stylesheet" href = "styles.css">
-        <script src = "main.js"></script>
 
         <title> Group 4's Wordle </title>
     </head>
@@ -18,187 +17,7 @@
         </header>
 
         <main>
-            <div class = "game-board">
-
-                <div class = "squares-for-letters">
-                    <p class = "letter">
-                        F
-                    </p>
-                </div>
-
-                <div class = "squares-for-letters">
-                    <p class = "letter">
-                        F
-                    </p>
-                </div>
-
-                <div class = "squares-for-letters">
-                    <p class = "letter">
-                        F
-                    </p>
-                </div>
-
-                <div class = "squares-for-letters">
-                    <p class = "letter">
-                        F
-                    </p>
-                </div>
-
-                <div class = "squares-for-letters">
-                    <p class = "letter">
-                        F
-                    </p>
-                </div>
-
-                <div class = "squares-for-letters">
-                    <p class = "letter">
-                        F
-                    </p>
-                </div>
-
-                <div class = "squares-for-letters">
-                    <p class = "letter">
-                        F
-                    </p>
-                </div>
-
-                <div class = "squares-for-letters">
-                    <p class = "letter">
-                        F
-                    </p>
-                </div>
-
-                <div class = "squares-for-letters">
-                    <p class = "letter">
-                        F
-                    </p>
-                </div>
-
-                <div class = "squares-for-letters">
-                    <p class = "letter">
-                        F
-                    </p>
-                </div>
-
-                <div class = "squares-for-letters">
-                    <p class = "letter">
-                        F
-                    </p>
-                </div>
-
-                <div class = "squares-for-letters">
-                    <p class = "letter">
-                        F
-                    </p>
-                </div>
-
-                <div class = "squares-for-letters">
-                    <p class = "letter">
-                        F
-                    </p>
-                </div>
-
-                <div class = "squares-for-letters">
-                    <p class = "letter">
-                        F
-                    </p>
-                </div>
-
-                <div class = "squares-for-letters">
-                    <p class = "letter">
-                        F
-                    </p>
-                </div>
-
-                <div class = "squares-for-letters">
-                    <p class = "letter">
-                        F
-                    </p>
-                </div>
-
-                <div class = "squares-for-letters">
-                    <p class = "letter">
-                        F
-                    </p>
-                </div>
-
-                <div class = "squares-for-letters">
-                    <p class = "letter">
-                        F
-                    </p>
-                </div>
-
-                <div class = "squares-for-letters">
-                    <p class = "letter">
-                        F
-                    </p>
-                </div>
-
-                <div class = "squares-for-letters">
-                    <p class = "letter">
-                        F
-                    </p>
-                </div>
-
-                <div class = "squares-for-letters">
-                    <p class = "letter">
-                        F
-                    </p>
-                </div>
-
-                <div class = "squares-for-letters">
-                    <p class = "letter">
-                        F
-                    </p>
-                </div>
-
-                <div class = "squares-for-letters">
-                    <p class = "letter">
-                        F
-                    </p>
-                </div>
-
-                <div class = "squares-for-letters">
-                    <p class = "letter">
-                        F
-                    </p>
-                </div>
-
-                <div class = "squares-for-letters">
-                    <p class = "letter">
-                        F
-                    </p>
-                </div>
-
-                <div class = "squares-for-letters">
-                    <p class = "letter">
-                        F
-                    </p>
-                </div>
-
-                <div class = "squares-for-letters">
-                    <p class = "letter">
-                        F
-                    </p>
-                </div>
-
-                <div class = "squares-for-letters">
-                    <p class = "letter">
-                        F
-                    </p>
-                </div>
-
-                <div class = "squares-for-letters">
-                    <p class = "letter">
-                        F
-                    </p>
-                </div>
-
-                <div class = "squares-for-letters">
-                    <p class = "letter">
-                        F
-                    </p>
-                </div>
+            <div class = "game-board" id = "game-board">
             </div>
         </main>
 
@@ -206,5 +25,6 @@
             COPYRIGHT 2024 - CSI 3140 A2
         </footer>
 
+        <script src = "main.js"></script> <!-- Allow for DOM to fully load then insert JS Script -->
     </body>
 </html>
