Added user functionality, letter checks, keystroke checks, and more

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
         <main>
             <div class = "game-board" id = "game-board">
             </div>
+
+            <h1 id = "reveal-answer"></h1>
         </main>
 
         <footer class = "footer-container">
