Added word checks, official wordle word list and more

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
             <h1 id = "reveal-answer"></h1>
         </main>
 
+        <button class = "generate" onclick = "window.location.reload();">PLAY AGAIN</button>
+
         <footer class = "footer-container">
             COPYRIGHT 2024 - CSI 3140 A2
         </footer>
